@@ -400,6 +400,8 @@ linux (4.9.268-1) UNRELEASED; urgency=medium
   * net: Avoid ABI change in 4.9.264
   * staging: Ignore ABI changes
   * tun: Ignore ABI changes
+  * debian/patches/features/all/rt/genpatch.py: Change argument parsing to use
+    argparse
 
  -- Ben Hutchings <benh@debian.org>  Fri, 26 Mar 2021 01:42:04 +0100
 
